# haskell-IRC-bot

./: IRC.hs  Main.hs  haskell-IRC-bot.cabal  settings.cfg
src/: IRC.hs  Main.hs
src/IRC/: Data.hs  Proto.hs
