name:                haskell-IRC-bot
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable haskell-IRC-bot
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       split >=0.2 && <0.3,
                       network >=2.6 && <2.7,
                       ConfigFile >= 1 && < 1.2,
                       MissingH >= 1.1 && < 1.4,
                       random >= 1.0 && < 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
